--- a/pages/page02.html
+++ b/pages/page02.html
@@ -5,26 +5,17 @@
     <meta charset="utf-8"/>
     <meta name="Tarmiton, recettes de cuisines originales"/>
     <title>Tarmiton | Pâtes au Tomates</title> 
-    <style>
-        h1{
-            color: rgb(87, 87, 87);
-            text-align: center;
-            font-size: 60px;
-            }
-        body{
-            background-color: rgb(255, 255, 255);
-        }
-        img{
-            width: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="../Style_page.css">
 </head>
 <!-- Corps de la page -->
 <body>
     <header>
     <img src="../images/logo.png" alt="Accueil"/>
-    <img src="../images/pates au tomates.jpg" class="content-item" alt="Pâtes au tomates" style="float: right;width: 300px;">
+    <img src="../images/pates au tomates.jpg" class="content-item" alt="Pâtes au tomates" style="float: right;width: 170px;">
     </header>
+    <div>
+        <br><br><br>
+    </div>
     <div>
         <h1>Pâtes aux tomates fraiches</h1>
         <h2>Temps de préparation : 10 min <br>
@@ -33,7 +24,7 @@
         </h2>
     </div>
     <div>
-        <h3>Ingrédients <br></h3>
+        <h3><u>Ingrédients :</u><br></h3>
         <p>Pour 2 personne : <br>
             <ul>
                 <img src="../images/tomates.png" alt="Tomates">
